--- a/{{ cookiecutter.package_name }}/.github/CODEOWNERS
+++ b/{{ cookiecutter.package_name }}/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # automatically requests pull request reviews for files matching the given pattern; the last match takes precendence
 
-*       @{{ cookiecutter.github_username }}  @Roman-Supernova-PIT/Software\ Admins 
+*       @{{ cookiecutter.github_username }} 
