--- a/{{ cookiecutter.package_name }}/.github/workflows/labeler.yml
+++ b/{{ cookiecutter.package_name }}/.github/workflows/labeler.yml
@@ -27,7 +27,7 @@ documentation:
       - 'docs/**/*'
       - '*.md'
       - '.readthedocs.yaml'
-      - 'LICENSE'
+      - 'licenses/LICENSE.rst'
 
 installation:
   - changed-files:
