--- a/.github/workflows/sphinx-deploy.yml
+++ b/.github/workflows/sphinx-deploy.yml
@@ -1,10 +1,8 @@
 name: "Deploy Sphinx Package Documentation to Pages"
 
-name: Deploy Sphinx documentation to Pages
-
 on:
   push:
-    branches: [main] # branch to trigger deployment
+    branches: [gh-pages] # branch to trigger deployment
 
   workflow_dispatch:
 
