--- a/.github/workflows/sphinx-deploy.yml
+++ b/.github/workflows/sphinx-deploy.yml
@@ -2,7 +2,7 @@ name: "Deploy Sphinx Package Documentation to Pages"
 
 on:
   push:
-    branches: [gh-pages] # branch to trigger deployment
+    branches: [main] # branch to trigger deployment
 
   workflow_dispatch:
 
