--- a/.github/workflows/sphinx-deploy.yml
+++ b/.github/workflows/sphinx-deploy.yml
@@ -1,22 +1,27 @@
-name: "Deploy Sphinx Package Documentation to Pages"
+name: "Deploy Package Documentation to Pages"
 
 on:
   push:
-    branches: [gh-pages] # branch to trigger deployment
+    branches: [main] # branch to trigger deployment
 
   workflow_dispatch:
 
 jobs:
   pages:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
     steps:
     - id: deployment
-      uses: sphinx-notes/pages@3a7b173ecba074b270b37c64007c1edfd8465892 # v3.1
+      uses: sphinx-notes/pages@3a7b173ecba074b270b37c64007c1edfd8465892  # v3.1
       with:
         publish: false
-    - uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e #v4.0.0
+        documentation_path: ./docs
+        pyproject_extras: docs
+    - uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e  # v4.0.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ${{ steps.deployment.outputs.artifact }}
+        publish_dir: ${{ steps.deployment.outputs.artifact }} 
+        publish_branch: gh-pages  # default: gh-pages
+        commit_message: ${{ github.event.head_commit.message }}
+
