--- a/{{ cookiecutter.package_name }}/.github/dependabot.yml
+++ b/{{ cookiecutter.package_name }}/.github/dependabot.yml
@@ -1,7 +1,9 @@
+name: "Dependabot Checks"
 version: 2
 updates:
 
 # maintain dependencies for pip
+# this should help with pyproject.toml
 - package-ecosystem: pip
   directory: "/"
   target-branch: "main"
@@ -9,20 +11,28 @@ updates:
     interval: weekly
   open-pull-requests-limit: 10
   reviewers:
-    - "sosey"
+    - "{{ cookiecutter.github_username }}"
   allow:
     - dependency-type: direct
     - dependency-type: indirect
   commit-message:
     prefix: "fix: "
+  labels:
+    - "CI/CD"
 
 # maintain dependencies for github-actions
 - package-ecosystem: "github-actions"
-  directory: "/"
+  directory: ".github/workflows"
   target-branch: "main"
   reviewers:
-    - "sosey"
+    - "{{ cookiecutter.github_username }}"
   schedule:
-    interval: weekly
+    interval: monthly
   commit-message:
     prefix: "fix: "
+  labels:
+    - "CI/CD"
+  groups:
+      actions:
+        patterns:
+          - "*"
