--- a/{{ cookiecutter.package_name }}/.github/workflows/sub_package_update.yml
+++ b/{{ cookiecutter.package_name }}/.github/workflows/sub_package_update.yml
@@ -36,9 +36,9 @@ jobs:
             title: Reject new updates from package template
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683. # v4.2.2
 
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b. # v5.3.0
         with:
           python-version: "3.11"
 
@@ -71,7 +71,7 @@ jobs:
 
       - name: Create pull request
         if: steps.check.outputs.has_changes == '1'
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f. #v7.0.5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: ${{ matrix.add-paths }}
