fix some typos and update readme

--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -140,8 +140,8 @@ name = "Documentation"
 showcontent = true
 
 [[tool.towndcrier.type]]
-directory = {{  cookiecutter.module_name }}
-name = " {{  cookiecutter.module_name  }}"
+directory = "{{ cookiecutter.module_name }}"
+name = "{{ cookiecutter.module_name }}"
 showcontent = true
 
 
