--- a/{{ cookiecutter.package_name }}/.github/workflows/changelog.yml
+++ b/{{ cookiecutter.package_name }}/.github/workflows/changelog.yml
@@ -25,6 +25,11 @@ jobs:
           fetch-depth: 0
       - run: pip install .
       - run: pip install towncrier
+{%- if cookiecutter.enable_dynamic_dev_versions == 'y' -%}
+      - run: if [[ -f snappl/_version.py ]]; then /bin/false; fi
+      - run: pip install setuptools-scm
+      - run: python -m setuptools_scm --force-write-version-files
+{% endif %}
       - run: towncrier check
       - run: towncrier build --draft | grep -P '#${{ github.event.number }}'
   prevent_manually_editing_changlog:
