working on getting dynamic version dependent workflow

--- a/{{ cookiecutter.package_name }}/.github/workflows/changelog.yml
+++ b/{{ cookiecutter.package_name }}/.github/workflows/changelog.yml
@@ -26,7 +26,13 @@ jobs:
       - run: pip install .
       - run: pip install towncrier
 {% if cookiecutter.enable_dynamic_dev_versions == 'y' %}
-      - run: if [[ -f snappl/_version.py ]]; then /bin/false; fi
+      - shell: bash
+        run: |
+          if [[ -f snappl/_version.py ]]; then
+             /bin/false
+          else
+             /bin/true
+          fi
       - run: pip install setuptools-scm
       - run: python -m setuptools_scm --force-write-version-files
 {% endif %}
