--- a/{{ cookiecutter.package_name }}/.github/CODEOWNERS
+++ b/{{ cookiecutter.package_name }}/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-# automatically requests pull request reviews for files matching the given pattern; the last match takes precendence
+# automatically requests pull request reviews for files matching the given pattern; the last match takes precendence. Make sure the software-admin team has write on your repo
 
 *       @{{ cookiecutter.github_username }} @Roman-Supernova-Pit/software-admins
