--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -4,11 +4,23 @@ description = "{{ cookiecutter.short_description }}"
 requires-python = ">={{ cookiecutter.minimum_python_version }}"
 dynamic = ["version"]
 authors = [{ name = "Roman Supernova PIT"}]
-
 {% if cookiecutter.author_name and cookiecutter.author_email %}
-    maintainer = [{ name = "{{ cookiecutter.author_name }},
-                    email = "{{ cookiecutter.author_email }}>"}
-              ]
+maintainers = [
+ {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
+ ]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python"
+]
+dependencies = [
+  "towncrier",
+  "setuptools_scm",
+  "cruft",
+  {% if cookiecutter.install_requires %}
+  "{{ cookiecutter.install_requires }}",
+  {% endif %}
+]
+license-files = ["LICENSE"]
 {% elif cookiecutter.author_name %}
     maintainer = [{ name = "{{ cookiecutter.author_name }}"}]
 {% endif %}
@@ -17,21 +29,13 @@ authors = [{ name = "Roman Supernova PIT"}]
 file = "README.rst"
 content-type = "text/x-rst"
 
-[project.license]
-file = "LICENSE"
-
-dependencies = [
-  {{- cookiecutter._install_requires -}}
-  "towncrier",
-  "cruft",
-]
 
 
 {% if cookiecutter.include_example_code == 'y' %}
 [project.scripts]
 package_template_example = "{{ cookiecutter.module_name }}.example_mod:main"
-
 {% endif %}
+
 [project.optional-dependencies]
 test = [
     "pytest",
@@ -52,6 +56,7 @@ docs = [
 repository = "{{ cookiecutter.project_url }}"
 {% endif %}
 
+
 [build-system]
 requires = [
   "setuptools>=62.1",
@@ -61,7 +66,7 @@ requires = [
 {% if cookiecutter.use_compiled_extensions == 'y' %}
   "extension-helpers",
   "cython",
-{% endif -%}
+{% endif %}
 ]
 build-backend = "setuptools.build_meta"
 
