--- a/{{ cookiecutter.package_name }}/tox.ini
+++ b/{{ cookiecutter.package_name }}/tox.ini
@@ -2,7 +2,7 @@
 min_version = 4.0
 envlist =
     py{311,312,313}-test
-    build_docs
+    build-docs
 
 [testenv]
 # tox environments are constructed with so-called 'factors' (or terms)
