--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,11 @@
+name: "Pull Request Labeler"
+
+on:
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
+
 # needs pull_request_target to label forks
 jobs:
   labeler:
@@ -18,6 +26,7 @@ documentation:
       - 'docs/**/*'
       - '*.md'
       - '.readthedocs.yaml'
+      - 'LICENSE'
 
 installation:
   - changed-files:
