--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{311,312,313}-test
-    build-{docs, dist}
+    build-docs
 
 [testenv]
 pass_env =
@@ -18,12 +18,13 @@ deps =
     pytest-cookies
     pytest-venv
     pytest-mock
+    devpi_process
     tox[testing]
 
 commands =
     pytest tests/ {posargs}
 
-[testenv:build_docs]
+[testenv:build-docs]
 description = invoke sphinx-build to build the HTML docs
 change_dir =
     docs
