--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -176,7 +176,7 @@ select = [ 'F', 'E101', 'E111', 'E112', 'E113', 'E115', 'E117',
 # This can be .rst or .md, towncrier's default template works with both.
 filename = "CHANGES.rst"
 directory = "changes"
-package = "{{ cookiecutter.package_name }}"
+package = "{{ cookiecutter.module_name }}"
 package_dir = "{{ cookiecutter.module_name }}"
 title_format = "{version} ({project_date})"
 ignore = [".gitkeep"]
