--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -182,7 +182,7 @@ package_dir = "{{ cookiecutter.module_name }}"
 title_format = "{version} ({project_date})"
 ignore = [".gitkeep"]
 wrap = true
-issue_format = "`#{issue} <https://github.com/{{ cookiecutter._pit_github_org }}/{{ cookiecutter.package_name }}/issues/{issue}>`_"
+issue_format = "`#{issue} <https://github.com/{{ cookiecutter._pit_github_org }}/{{ cookiecutter.github_snpit_repo_name }}/issues/{issue}>`_"
 
 [[tool.towncrier.type]]
 directory = "/"
