--- a/{{ cookiecutter.package_name }}/.github/workflows/sub_package_update.yml
+++ b/{{ cookiecutter.package_name }}/.github/workflows/sub_package_update.yml
@@ -35,9 +35,9 @@ jobs:
             title: Reject new updates from package template
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683. # v4.2.2
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b. # v5.3.0
+      - uses: actions/setup-python@083679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.0.1
         with:
           python-version: "3.11"
 
@@ -70,7 +70,7 @@ jobs:
 
       - name: Create pull request
         if: steps.check.outputs.has_changes == '1'
-        uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f. #v7.0.5
+        uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 #v8.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           add-paths: ${{ matrix.add-paths }}
